tests/samples/negative/expressions/implicit_numeric_conversion.ax
module implicit_numeric_conversion;

fn main() -> i32 {
    let x: u32 = ((1) as u32);
    let y: u64 = x;
    return ((y) as i32);
}
